Added Java 8 version error reporting.